--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,60 @@
-Package: R_Workshop
-Title: Bioconductor or R Workshop Template and Github Actions
-Version: 1.0.1
+Package: R_workshop
+Title: Orchestrating Large-Scale Single-Cell Analysis with Bioconductor
+Version: 0.99.13
 Authors@R: 
-    person(given = "Yun",
-           family = "Wang",
-           role = c("aut", "cre"),
-           email = "seandavi@gmail.com",
-           comment = c(ORCID = "0000-0002-8991-6458"))
-Description: MPI AGE. 
-License: MIT + file LICENSE
+    c(person("Davide", "Risso", role = "aut", email = "davide.risso@unipd.it"),
+    person("Ludwig", "Geistlinger", role = c("aut", "cre"),
+           email = "ludwig_geistlinger@hms.harvard.edu"),
+    person("Marcel", "Ramos", role = "ctb",
+           email = "marcel.ramos@roswellpark.org"),
+    person("Dario", "Righelli", role = "ctb", email = "drighelli@gmail.com")) 
+Description: This tutorial aims to provide a solid foundation in using
+    Bioconductor tools for single-cell RNA-seq analysis by walking through
+    various steps of typical workflows using example datasets. 
+License: Artistic-2.0
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Depends: 
-    Biobase
+    R (>= 4.3.0)
+Imports:
+    AUCell,
+    CuratedAtlasQueryR,
+    DropletUtils,
+    EnsDb.Mmusculus.v79,
+    MouseGastrulationData,
+    Seurat,
+    SeuratData,
+    SingleR,
+    TENxBrainData,
+    batchelor,
+    scater,
+    scran,
+    scuttle,
+    DropletUtils,
+    EnsDb.Mmusculus.v79,
+    batchelor,
+    igraph,
+    gridExtra,
+    pheatmap,
+    scDblFinder,
+    zellkonverter,
+    ggplot2,
+    edgeR
+Suggests: 
+    BiocStyle,
+    dplyr,
     knitr,
     rmarkdown,
+    stringr,
     pkgdown
-URL: https://fulaibaowang.github.io/R_workshop/
-BugReports: https://github.com/seandavi/BuildABiocWorkshop/issues/new/choose
+Remotes:
+    lgeistlinger/SeuratData,
+    stemangiola/CuratedAtlasQueryR
+URL:
+    https://fulaibaowang.github.io/R_workshop/,
+    ghcr.io/bioconductor/ismb.osca
+BugReports: https://github.com/Bioconductor/ISMB.OSCA/issues/new/choose
 VignetteBuilder: knitr
-DockerImage: ghcr.io/seandavi/buildabiocworkshop:latest
+DockerImage: ghcr.io/bioconductor/ismb.osca:latest
