--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,9 +1,10 @@
-url: https://fulaibaowang.github.io/R_workshop
+title: "ISMB.OSCA"
+
+url: https://fulaibaowang.github.io/R_workshop/
 
 template:
   params:
     bootswatch: flatly
-    #ganalytics: UA-99999999-9
 
 navbar:
   title: ~
@@ -13,7 +14,8 @@ navbar:
       menu:
       - text: Introduction to Bioconductor
         href: articles/intro_bioc_sce.html
-        
+
+
   right:
    - icon: fa-github
      href: https://github.com/fulaibaowang/R_workshop
