--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,6 @@
-title: "s"
+title: "ISMB.OSCA"
 
-url: https://fulaibaowang.github.io/R_workshop/
+url: https://bioconductor.github.io/ISMB.OSCA
 
 template:
   params:
@@ -15,9 +15,8 @@ navbar:
       - text: Introduction to Bioconductor
         href: articles/intro_bioc_sce.html
 
-
   right:
    - icon: fa-github
-     href: https://github.com/fulaibaowang/R_workshop
+     href: https://github.com/Bioconductor/ISMB.OSCA
      
 
