--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,6 @@
 title: "ISMB.OSCA"
 
-url: https://bioconductor.github.io/ISMB.OSCA
+url: https://fulaibaowang.github.io/R_workshop/
 
 template:
   params:
@@ -17,6 +17,6 @@ navbar:
 
   right:
    - icon: fa-github
-     href: https://github.com/Bioconductor/ISMB.OSCA
+     href: https://github.com/fulaibaowang/R_workshop
      
 
